Project

General

Profile

Actions

Bug #55432

closed

ceph_test_librgw_file_nfsns crash on shutdown during ~OpsLogFile()

Added by Casey Bodley about 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
opslog nfs
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

[ RUN      ] LibRGW.SHUTDOWN
2022-04-25T12:22:19.145-0400 7f01aadc9780 -1 shutting down
2022-04-25T12:22:19.145-0400 7f00937fe640 -1 received  signal: User defined signal 1, si_code : -6, si_value (int): 0, si_value (ptr): 0, si_errno: 0, si_pid : 71234, si_uid : 1000, si_addr0x3e800011642, si_status0
/home/cbodley/ceph/src/common/condition_variable_debug.cc: In function 'void ceph::condition_variable_debug::notify_one()' thread 7f01aadc9780 time 2022-04-25T12:22:19.146955-0400
/home/cbodley/ceph/src/common/condition_variable_debug.cc: 38: FAILED ceph_assert(waiter_mutex == nullptr || waiter_mutex->is_locked())
 ceph version Development (no_version) quincy (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x11c) [0x7f01ae7abe57]
 2: (ceph::register_assert_context(ceph::common::CephContext*)+0) [0x7f01ae7ac05e]
 3: (ceph::condition_variable_debug::notify_one()+0x34) [0x7f01ae86e5ac]
 4: (OpsLogFile::stop()+0x10) [0x7f01af60993a]
 5: (OpsLogFile::~OpsLogFile()+0xb8) [0x7f01af609a6a]
 6: (OpsLogFile::~OpsLogFile()+0x9) [0x7f01af609cbd]
 7: (OpsLogManifold::~OpsLogManifold()+0x25) [0x7f01af60982b]
 8: (OpsLogManifold::~OpsLogManifold()+0x9) [0x7f01af609875]
 9: (rgw::RGWLib::stop()+0x2ec) [0x7f01af5bc9fa]
 10: librgw_shutdown()
 11: (LibRGW_SHUTDOWN_Test::TestBody()+0x10) [0x55668728ff42]

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #55455: quincy: ceph_test_librgw_file_nfsns crash on shutdown during ~OpsLogFile()ResolvedActions
Copied to rgw - Backport #55456: pacific: ceph_test_librgw_file_nfsns crash on shutdown during ~OpsLogFile()ResolvedActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
  • Backport set to pacific quincy
  • Pull request ID set to 46027
Actions #2

Updated by Casey Bodley about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55455: quincy: ceph_test_librgw_file_nfsns crash on shutdown during ~OpsLogFile() added
Actions #4

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55456: pacific: ceph_test_librgw_file_nfsns crash on shutdown during ~OpsLogFile() added
Actions #5

Updated by Backport Bot almost 2 years ago

  • Tags changed from opslog nfs to opslog nfs backport_processed
Actions #6

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags changed from opslog nfs backport_processed to opslog nfs
Actions

Also available in: Atom PDF