rgw: OpsLogFile::stop() signals under mutex

this shuts up ceph::debug_condition_variable's assertion that the
associated mutex is held during notify_one(). this is not strictly
required for correct use, but is a common source of bugs

Fixes: https://tracker.ceph.com/issues/55432

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit cf6f99e67a6dbbc4e39d9e1fda32356c18051f5a)